# 42cursor

./: .gitignore  mk_task.sh
cpp/: a.out  solve  solve.cpp
cpp/1022/: result  solve  solve.cpp
cpp/10448/: solve.cpp
cpp/1072/: solve
cpp/11723/: solve.cpp
cpp/1449/: input  solve.cpp
cpp/1620/: solve.cpp
cpp/1764/: solve.cpp
cpp/1912/: output  solve.cpp
cpp/2231/: solve.cpp
cpp/2309/: solve.cpp
cpp/3085/: solve.cpp
cpp/4796/: solve.cpp
cpp/???/: solve  solve.cpp
gnl/: Makefile  gnl.c  gnl.h  gnl_utils.c  notyet
inception-fuck/: Makefile
inception-fuck/srcs/: .env  docker-compose.yml
inception-test2/: 222  Makefile  id_rsa_inception.cer  init.sh
inception-test2/srcs/: .env  docker-compose.yml
inceptions/: Makefile
inceptions/srcs/: .env  docker-compose.yml
irc_git/: README.md
lst/: list.c  list.h  list_utils.c  readme  string_utils.c  utils.c  utils.h
matcha-front/: .prettierrc  init_yarn.sh  package.json  tsconfig.json  webpack.common.js
philosopher/: Makefile  philo  res  test.sh
python/: 1015.py  1058.py  1059.py  1064.py  1259.py  1541.py  15961.py  20529.py  9251.py  scratch.py
todo-app-fastapi/: main.py  pyproject.toml  test.db
todo-app-fastapi/alembic/versions/: 01ab64474f34_second.py  0255c464f23e_first_migrations.py
todo-app-fastapi/app/: server.py
todo-app-fastapi/database/: database.py
todo-app-fastapi/database/models/: todo.py
todo-app-fastapi/database/scheme/: todo.py
todo-app-fastapi/routes/test/: test.py
todo-app-fastapi/routes/todo/: todo.py
tree/: readme  tree.c  tree.h
(+86 files in other folders)
