[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["jihkang <106561135+jihkang@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "todo_app"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.3"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
